Fix uppercase image name

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,7 +5,7 @@ on:
 env:
   REGISTRY: ghcr.io
   # Используем github.repository (автоматически подставит USER/REPO)
-  IMAGE_NAME: ${{ github.repository }}
+  IMAGE_NAME: zofus/django-kubernetes-app
   K8S_NAMESPACE: django-app
 
 jobs:
@@ -39,3 +39,4 @@ jobs:
           
           # Форсируем обновление образа (перезапуск)
           kubectl rollout restart deployment/django-deployment -n ${{ env.K8S_NAMESPACE }}
+
