--- a/k8s-manifests/secret.yaml
+++ b/k8s-manifests/secret.yaml
@@ -5,6 +5,5 @@ metadata:
   namespace: django-app
 type: Opaque
 stringData:
-  # Реальные секреты будут инжектиться через Vault или GitHub Actions
-  db_user: "placeholder"
-  db_password: "placeholder"
+  DB_USER: "django_user"
+  DB_PASSWORD: "SuperSecret123!"
